# ObscuraPrimus

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ObscuraPrimus.spec  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  version_info.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: ObscuraPrimus_Local_Code_Signing_2026.cer  ObscuraPrimus_Release_Signing_2026_pubkey.asc  REPRODUCIBLE_BUILDS.md  SHA256SUMS  USER_MANUAL.md
installer/: ObscuraPrimus.iss
obscuraprimus/: __init__.py  advanced_analysis.py  carriers.py  case_db.py  cli.py  compression.py  crypto.py  file_analysis.py  flac_codec.py  forensics.py  gui_main.py  health.py  jobs.py  jpeg_dct.py  plugins.py  png_codec.py  runtime.py  signing.py  stego_engine.py
scripts/: build_release.ps1  bump_version.py  dependency_licenses.py  generate_sbom.py  pgp_release.py
tests/: test_advanced_analysis.py  test_file_analysis.py  test_gui_smoke.py  test_stego_roundtrip.py
tests/fixtures/: corpus_manifest.json
