[project]
name = "ObscuraPrimus"
version = "1.0.0"
description = "A USB-portable PySide6 steganography and forensic file analysis suite."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ObscuraPrimus contributors" }]
dependencies = [
    "PySide6>=6.6",
    "cryptography>=42.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["coverage>=7.0", "mypy>=1.8", "ruff>=0.6"]

[project.scripts]
obscuraprimus = "obscuraprimus.cli:main"
obscuraprimus-gui = "obscuraprimus.gui_main:main"

[tool.pyinstaller]
entry-point = "app.py"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["obscuraprimus"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
